--- a/src/components/Process.astro
+++ b/src/components/Process.astro
@@ -2,13 +2,13 @@
 const activeName = ""; // ej. "Zelle" para resaltarlo
 
 const methods = [
-  { name: "Zelle",           icon: "/public/zelle.svg",          color: "#6A1B9A", url: "https://www.zellepay.com/" },
-  { name: "Cash App",        icon: "/public/cashapp.svg",        color: "#00C244", url: "https://cash.app/" },
-  { name: "Venmo",           icon: "/public/venmo.svg",          color: "#3D95CE", url: "https://venmo.com/" },
-  { name: "PayPal",          icon: "/public/paypal.svg",         color: "#003087", url: "https://www.paypal.com/" },
-  { name: "Chase",           icon: "/public/chase.svg",          color: "#117ACA", url: "https://www.chase.com/" },
-  { name: "Bofa",            icon: "/public/bofa.svg",  color: "#D4001A", url: "https://www.bankofamerica.com/" },
-  { name: "Binance",         icon: "/public/binance.svg",        color: "#F3BA2F", url: "https://www.binance.com/" },
+  { name: "Zelle",           icon: "/zelle.svg",          color: "#6A1B9A", url: "https://www.zellepay.com/" },
+  { name: "Cash App",        icon: "/cashapp.svg",        color: "#00C244", url: "https://cash.app/" },
+  { name: "Venmo",           icon: "/venmo.svg",          color: "#3D95CE", url: "https://venmo.com/" },
+  { name: "PayPal",          icon: "/paypal.svg",         color: "#003087", url: "https://www.paypal.com/" },
+  { name: "Chase",           icon: "/chase.svg",          color: "#117ACA", url: "https://www.chase.com/" },
+  { name: "Bofa",            icon: "/bofa.svg",  color: "#D4001A", url: "https://www.bankofamerica.com/" },
+  { name: "Binance",         icon: "/binance.svg",        color: "#F3BA2F", url: "https://www.binance.com/" },
 ];
 ---
 
