--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -21,7 +21,7 @@ const demo = reviews.length ? reviews : [
     date: "2025-07-28",
     rating: 5,
     text: "Excellent service, 100% recommended.",
-    avatar: "/public/anderson.png",
+    avatar: "/anderson.png",
     url: "https://www.google.com/maps/contrib/111052014790559477700/place/ChIJGwGVk4CsDGUR7mVUkvqeMa8/@37.3592834,-127.0620127,208766m/data=!3m1!1e3!4m6!1m5!8m4!1e1!2s111052014790559477700!3m1!1e1?hl=en&entry=ttu&g_ep=EgoyMDI1MDgwNi4wIKXMDSoASAFQAw%3D%3D",
     source: "google"
   },
@@ -30,7 +30,7 @@ const demo = reviews.length ? reviews : [
     date: "2025-07-18",
     rating: 5,
     text: "Excelente servicio recomendado al 100% En responsabilidad y puntualidad muchísimas bendiciones🙏sigamos por mas",
-    avatar: "/public/orianis.png",
+    avatar: "/orianis.png",
     url: "https://www.google.com/maps/contrib/112089206082978181459/place/ChIJGwGVk4CsDGUR7mVUkvqeMa8/@37.3592834,-127.0620127,208766m/data=!3m1!1e3!4m6!1m5!8m4!1e1!2s112089206082978181459!3m1!1e1?hl=en&entry=ttu&g_ep=EgoyMDI1MDgwNi4wIKXMDSoASAFQAw%3D%3D",
     source: "google"
   },
@@ -39,7 +39,7 @@ const demo = reviews.length ? reviews : [
     date: "2025-07-15",
     rating: 5,
     text: "Excelente servicio, muy confiables y serios, 💯 recomendables",
-    avatar: "/public/jose.png",
+    avatar: "/jose.png",
     url: "https://www.google.com/maps/contrib/107349572692930073194/place/ChIJGwGVk4CsDGUR7mVUkvqeMa8/@37.3592834,-126.4440317,13048m/data=!3m1!1e3!4m6!1m5!8m4!1e1!2s107349572692930073194!3m1!1e1?hl=en&entry=ttu&g_ep=EgoyMDI1MDgwNi4wIKXMDSoASAFQAw%3D%3D",
     source: "google"
   },
@@ -48,7 +48,7 @@ const demo = reviews.length ? reviews : [
     date: "2025-07-12",
     rating: 5,
     text: "Excelente servicio.. responsabilidad 100% garantizada",
-    avatar: "/public/jeandy.png",
+    avatar: "/jeandy.png",
     url: "https://www.google.com/maps/contrib/115244030168881921008/place/ChIJGwGVk4CsDGUR7mVUkvqeMa8/@37.3592834,-127.0620127,208766m/data=!3m1!1e3!4m6!1m5!8m4!1e1!2s115244030168881921008!3m1!1e1?hl=en&entry=ttu&g_ep=EgoyMDI1MDgwNi4wIKXMDSoASAFQAw%3D%3D",
     source: "google"
   },
@@ -57,7 +57,7 @@ const demo = reviews.length ? reviews : [
     date: "2025-07-12",
     rating: 5,
     text: "Excelente servicio,  rápido y eficaz.  Muchas gracias AD Global x la atención y responsabilidad.",
-    avatar: "/public/liz.png",
+    avatar: "/liz.png",
     url: "https://www.google.com/maps/contrib/100443016051532172130/place/ChIJGwGVk4CsDGUR7mVUkvqeMa8/@37.3592834,-127.0620127,208766m/data=!3m1!1e3!4m6!1m5!8m4!1e1!2s100443016051532172130!3m1!1e1?hl=en&entry=ttu&g_ep=EgoyMDI1MDgwNi4wIKXMDSoASAFQAw%3D%3D",
     source: "google"
   },
@@ -66,7 +66,7 @@ const demo = reviews.length ? reviews : [
     date: "2025-07-02",
     rating: 5,
     text: "Excelente servicio, respuesta inmediata",
-    avatar: "/public/yolymar.png",
+    avatar: "/yolymar.png",
     url: "https://www.google.com/maps/contrib/115847963760010935894/place/ChIJGwGVk4CsDGUR7mVUkvqeMa8/@37.3592834,-129.0395518,835064m/data=!3m1!1e3!4m6!1m5!8m4!1e1!2s115847963760010935894!3m1!1e1?hl=en&entry=ttu&g_ep=EgoyMDI1MDgwNi4wIKXMDSoASAFQAw%3D%3D",
     source: "google"
   }
